<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddPatientActivity" >

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/first_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:layout_alignLeft="@+id/first_name"
        android:inputType="textCapSentences"
        android:hint="@string/first_name_hint" />
    
    <TextView
        android:id="@+id/middle_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/first_name_field"
        android:layout_alignLeft="@+id/first_name"
        android:text="@string/middle_name" />
       
   <EditText
        android:id="@+id/middle_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/middle_name"
        android:layout_alignLeft="@+id/first_name"
        android:inputType="textCapSentences"
        android:hint="@string/middle_name_hint" />
   
    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/middle_name_field"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/first_name"
        android:text="@string/last_name" />
   
    <EditText
        android:id="@+id/last_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name"
        android:layout_alignLeft="@+id/first_name"
        android:inputType="textCapSentences"
        android:hint="@string/last_name_hint" />
    
    <TextView
        android:id="@+id/hcn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name_field"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/first_name"
        android:text="@string/hcn" />
      
    <EditText
        android:id="@+id/hcn_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hcn"
        android:layout_alignLeft="@+id/first_name"
        android:inputType="textCapCharacters"
        android:hint="@string/health_card_num_hint" />
    
    <TextView
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hcn_field"
        android:layout_alignLeft="@+id/first_name"
        android:layout_marginTop="10dp"
        android:text="@string/dob" />
         
    <EditText
        android:id="@+id/dob_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dob"
        android:layout_alignLeft="@+id/first_name"
        android:inputType="date"
        android:hint="@string/date_hint" />
    
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dob_field"
        android:layout_alignLeft="@+id/first_name"
        android:layout_marginTop="10dp"    
        android:text="@string/save_button" 
        android:onClick="addPatient" />

</RelativeLayout>