<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TakeVitalsActivity" >

    <TextView
        android:id="@+id/take_prescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_prescription" />
    
	<EditText
	    android:id="@+id/medicine_field"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/take_prescription"
	    android:layout_below="@+id/medicine"
	    android:ems="10"
	    android:hint="@string/medicine_hint" />

	<EditText
	    android:id="@+id/instructions_field"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/save"
	    android:layout_below="@+id/instructions"
	    android:ems="10"
	    android:hint="@string/symptoms_hint" />

	<TextView
	    android:id="@+id/instructions"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/instructions_field"
	    android:layout_below="@+id/medicine_field"
	    android:layout_marginTop="30dp"
	    android:text="@string/instructions" />

	<TextView
	    android:id="@+id/medicine"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/medicine_field"
	    android:layout_below="@+id/take_prescription"
	    android:layout_marginTop="22dp"
	    android:text="@string/medicine" />

	<Button
	    android:id="@+id/save"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/medicine_field"
	    android:layout_alignRight="@+id/medicine"
	    android:layout_centerVertical="true"
	    android:onClick="takePrescription"
	    android:text="@string/save_button" />

</RelativeLayout>