<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PatientRecordActivity" >
    
    <TextView
	    android:id="@+id/name"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="10dp"
	    android:layout_marginTop="15dp"
	    android:textSize="20sp"
	    android:text="@string/name" />
    
    <TextView 
        android:id="@+id/patient_name"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/name"
    	android:layout_alignLeft="@+id/name"
    	android:textSize="16sp"
    	android:text="@+id/patient_name" />
    
    <TextView 
        android:id="@+id/hcn"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_below="@+id/patient_name"
        android:layout_alignLeft="@+id/name"
    	android:layout_marginTop="30dp"
    	android:textSize="20sp"
    	android:text="@string/hcn" />
    
    <TextView
        android:id="@+id/patient_hcn"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_below="@+id/hcn"
        android:layout_alignLeft="@+id/hcn"
        android:textSize="16sp"
    	android:text="@+id/patient_hcn" />
    
    <TextView 
        android:id="@+id/age"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:layout_below="@+id/patient_hcn"
        android:layout_alignLeft="@+id/patient_hcn"
    	android:layout_marginTop="30dp"
    	android:textSize="20sp"
    	android:text="@string/age" />
        
    <TextView 
        android:id="@+id/patient_age"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/age"
        android:layout_alignLeft="@+id/age"
    	android:textSize="16sp"
    	android:text="@+id/patient_age" />
        
    <TextView 
        android:id="@+id/dob"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignBottom="@+id/age"
    	android:layout_centerHorizontal="true"
    	android:textSize="20sp"
    	android:text="@string/dob" />
    
    <TextView 
        android:id="@+id/patient_dob"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignBottom="@+id/patient_age"
    	android:layout_alignLeft="@+id/dob"
    	android:textSize="16sp"
    	android:text="@+id/patient_dob" />
    
    <Button
        android:id="@+id/view_visit"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/patient_dob"
	    android:layout_marginLeft="20dp"
	    android:layout_marginTop="35dp"
	    android:onClick="getVisit"
	    android:text="@string/view_visit_button" />
    
    <Button
        android:id="@+id/add_visit"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/view_visit"
	    android:layout_toRightOf="@+id/view_visit"
	    android:layout_marginLeft="30dp"
	    android:onClick="addVisit"
	    android:text="@string/add_visit_button" />
            	
</RelativeLayout>