<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity" >



    <TextView
        android:id="@+id/search_patient_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="19dp"
        android:text="@string/search_patient_text" />

    <EditText
        android:id="@+id/health_card_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_patient_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="10" 
        android:hint="@string/health_card_num_hint" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/health_card_field"
        android:layout_below="@+id/health_card_field"
        android:layout_marginTop="38dp"
        android:layout_toRightOf="@+id/search_patient_header"
        android:text="@string/search_text"
        android:onClick="searchPatient" />

</RelativeLayout>