<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"  />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="124dp" 
        android:orientation="vertical">
    </LinearLayout>

    <EditText
        android:id="@+id/username_field"
        android:layout_width="-15dip"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginTop="29dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/username" />

   <EditText
        android:id="@+id/password_field"
        android:layout_width="-15dip"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username_field"
        android:layout_below="@+id/username_field"
        android:layout_marginTop="31dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" >

       
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password_field"
        android:layout_alignTop="@+id/linearLayout1"
        android:onClick="Login"
        android:text="@string/login" />

</RelativeLayout>
